syntax = "proto3";
package service;
option go_package = "./service";

message ThumbupRequest{
    string bizId = 1;   //业务ID
    int64 objId = 2;    //点赞对象ID
    int64 userId = 3;   //用户ID
    int32 likeType = 4; //点赞类型
}
message ThumbupResponse{
    string bizId = 1;   //业务ID
    int64 objId = 2;    //点赞对象ID
    int64 likeNum = 3;  //点赞数量
    int64 dislikeNum = 4;   //点踩数量
}

message IsThumbupRequest{
    string bizId = 1;
    int64 targetId = 2;
    int64 userId = 3;
}
message IsThumbupResponse{
    map<int64,UserThumbup> userThumbups = 1;
}
message UserThumbup{
    int64 userId = 1;
    int64 thumbupTime = 2;
    int32 likeType = 3;
}

service like{
    rpc Thumbup (ThumbupRequest) returns (ThumbupResponse);
    rpc IsThumbup (IsThumbupRequest) returns (IsThumbupResponse);
}